# Python_guides

./: README.md  matplotlib_guide.ipynb  pandas_guide.ipynb  positional_embeddings.py  pyproject.toml  python_guide.py  seaborn.ipynb
.ipynb_checkpoints/: Seaborn-checkpoint.ipynb  matplotlib_guide-checkpoint.ipynb
notebooks/: linear_discriminant_analysis.ipynb  matplotlib_guide.ipynb  numpy_guide.ipynb  pandas_guide.ipynb  scikit-learn_guide.ipynb  scikit_learn.ipynb  tensorflow_guide.ipynb
notebooks/.ipynb_checkpoints/: numpy_guide-checkpoint.ipynb  python_guide-checkpoint.ipynb  scikit-learn_guide-checkpoint.ipynb
