[project]
name = "python-guides"
version = "0.1.0"
description = ""
authors = [
    {name = "Joe Klinck",email = "jklinck76@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "tensorflow-macos (>=2.16.2,<3.0.0)",
    "tensorflow-metal (>=1.2.0,<2.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
